--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "debug": "^2.1.0",
     "string-hash": "^1.1.0",
     "ttl-cache": "^1.0.2",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "es-hash": "^1.0.4"
+  },
+  "devDependencies": {
+    "should": "^4.3.0",
+    "mocha": "^2.0.1",
+    "mongoose": "^3.8.19"
   }
 }
